# darwindeck

./: .gitignore  BENCHMARK_ANALYSIS.md  BENCHMARK_SUMMARY.md  CLAUDE.md  Makefile  PHASE3.5_PROGRESS.md  PHASE3.5_STATUS.md  PHASE3_COMPLETION.md  PHASE3_FINAL_RESULTS.md  PHASE4_COMPLETE.md  README.md  ROADMAP.md  WAR_SIMULATION_FIX_SUMMARY.md  benchmark_parallel.txt  benchmark_results.txt  benchmark_serial.txt  libcardsim.h  playtest_results.jsonl  pyproject.toml
.hypothesis/constants/: 00ba5e74d3e12143  1acd15ea13bfe831  1b1a1af988838b6b  1b29dbd051e286b7  1da02dd649283d3a  1f592153b748177a  260058789f9cef84  2b039a39ddacc728  341262fa26c47c31  3aab04e1a477caff  48c00badf966e754  4c43c97dc80e61dd  52abc2f6e892ae1c  567fb796060131d3  5c9d8a2d55d90276  64ea8a6a2332308b  69abf0e9ffa2e83d  6b5902553dfe1c60  6f247d947b8853af  7ce952480b5490ef  811de94a1b2cf7b2  813922722bd62978  8561c37b7172d874  897f0afdf6eaa255  9aa9797615cd57ce  a0b71890a9659d01  aa49f92321a02d4d  b4569e1cc8695e04  b6d32fd6f61b3fbb  c58b7d182edbce77  (+15 more)
benchmarks/: benchmark_golang.py  benchmark_python_genome.py  compare_genome_implementations.py  compare_go_python_evolution.py  degenerate_rate.py
docs/: PHASE1_STATUS.md  PHASE6_INTEGRATION_RESULTS.md  analysis-0.8403-ceiling.md  genome-schema-examples.md  hoyles-game-examples.md  parallelization-strategy.md  skill-evaluation.md
examples/: parallel_fitness_demo.py
schema/: simulation.fbs
scripts/: analyze_basins.py  compare_interaction_metrics.py  deploy-to-server.sh  fitness_comparison.py  playtest.sh  run-evolution.sh  setup-server.sh
(+269 files in other folders)
