[project]
name = "darwindeck"
version = "0.1.0"
description = "DarwinDeck: Evolutionary card game system using genetic algorithms"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "numpy>=1.26",
    "click>=8.1",
    "pyyaml>=6.0",
    "flatbuffers>=23.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.92",
    "black>=23.12",
    "mypy>=1.8",
]

[tool.poetry]
name = "darwindeck"
version = "0.1.0"
description = "DarwinDeck: Evolutionary card game system using genetic algorithms"
authors = ["Gabe <gabe@signalnine.net>"]
readme = "README.md"
packages = [{include = "darwindeck", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5"
numpy = "^1.26"
click = "^8.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
hypothesis = "^6.92"
black = "^23.12"
mypy = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
